<resources>
    <string name="app_name">Quaso</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment_background_image">Home Fragment background image</string>
    <string name="small_app_logo">Small app logo</string>
    <string name="points_value">%1$d Points</string>
    <string name="last_nattempt">Last\nAttempt</string>
    <string name="mode">Mode</string>
    <string name="nan">NaN</string>
    <string name="points">Points</string>
    <string name="regions">Regions</string>
    <string name="icon_back">Icon back</string>
    <string name="region">Region</string>
    <string name="hint_button">Hint button</string>
    <string name="top_left_overlay_item">Top Left Overlay Item</string>
    <string name="bottom_left_overlay_item">Bottom Left Overlay Item</string>
    <string name="top_center_overlay_item">Top Center Overlay Item</string>
    <string name="bottom_center_overlay_item">Bottom Center Overlay Item</string>
    <string name="top_right_overlay_item">Top Right Overlay Item</string>
    <string name="bottom_right_overlay_item">Bottom Right Overlay Item</string>
    <string name="points_title">Points</string>
    <string name="next">Next</string>
    <string name="_0">0</string>
    <string name="error_try_again_later">Error! Please, try again…</string>
    <string name="try_again">Try Again</string>
    <string name="percentage_value">%1$d%%</string>
    <string name="please_wait">Please wait</string>
    <string name="error_happened">Can\'t start game</string>
    <string name="quizTitle">%1$s</string>
    <string name="ac_name">Ascension Island</string>
    <string name="ac_hint">Officially, nobody is from there. The UK government denies the right of abode, turning citizens - some of whom have lived on the island for decades - into temporary visitors.</string>
    <string name="ad_name">Andorra</string>
    <string name="ad_hint">The only country on earth where the official language of is Catalan.</string>
    <string name="ae_name">United Arab Emirates</string>
    <string name="ae_hint">Six of the world’s tallest hotels are in the this country.</string>
    <string name="af_name">Afganistan</string>
    <string name="af_hint">This country is the world’s largest producer of opium.</string>
    <string name="ag_name">Antigua and Barbuda</string>
    <string name="ag_hint">Country name means “Old” in Spanish, named by Christopher Columbus, who first discover the island, in honor of the Seville Cathedral of Santa Maria La Antigua.</string>
    <string name="ai_name">Anguilla</string>
    <string name="ai_hint">It was once known as “Snake Island”</string>
    <string name="al_name">Albania</string>
    <string name="al_hint">The world’s largest hydroelectricity producer. 100% of the country’s energy is hydroelectric.</string>
    <string name="am_name">Armenia</string>
    <string name="am_hint">The capital is one of the oldest cities in the world.</string>
    <string name="ao_name">Angola</string>
    <string name="ao_hint">Portuguese is the official language.</string>
    <string name="ar_name">Argentina</string>
    <string name="ar_hint">Has more psychologists per capita than any other country in the world.</string>
    <string name="as_name">American Samoa</string>
    <string name="as_hint">Weather stations detect rain 300 days out of 365 each year int his country.</string>
    <string name="at_name">Austria</string>
    <string name="at_hint">The world’s first zoo, founded in 1752, is still in operation here.</string>
    <string name="au_name">Australia</string>
    <string name="au_hint">This continent/country is home to Uluru, or Ayers Rock, a massive red sandstone formation in the Northern Territory that is sacred ground for aboriginals.</string>
    <string name="aw_name">Aruba</string>
    <string name="aw_hint">They have Dutch nationality.</string>
    <string name="ax_name">Aland Islands</string>
    <string name="ax_hint">It has 20,000 islands</string>
    <string name="az_name">Azerbaijan</string>
    <string name="az_hint">Folklore and superstition reign supreme in this former Soviet republic.</string>
    <string name="ba_name">Bosnia and Herzegovina</string>
    <string name="ba_hint">In southeast Europe believe that a network of 12,000-year-old pyramids exists within the country’s borders.</string>
    <string name="bb_name">Barbados</string>
    <string name="bb_hint">There’s a saying on this country that if a mongoose crosses the street in front of you, it signifies good luck.</string>
    <string name="bd_name">Bangladesh</string>
    <string name="bd_hint">This South Asian country is very warm — so warm, in fact, that the lowest temperature ever recorded was 2.6 degrees Celsius.</string>
    <string name="be_name">Belgium</string>
    <string name="be_hint">Chocolate is huge in this European country, which can produce some 600,000 tons of it per year across its more than 2,000 companies and shops specializing in the confection.</string>
    <string name="bf_name">Burkina Faso</string>
    <string name="bf_hint">Revolutionary Thomas Sankara is known as the “African Che Guevara” for his efforts, as president from 1983–87, to rid the country of corruption and environmental degradation while empowering women and boosting education and health-care access.</string>
    <string name="bg_name">Bulgaria</string>
    <string name="bg_hint">This ancient Balkan nation claims to have accidentally created yogurt some 4,000 years ago.</string>
    <string name="bh_name">Bahrain</string>
    <string name="bh_hint">Unlike in many of its Middle East neighbors, women are allowed to vote and run for office.</string>
    <string name="countries">Countries</string>
    <string name="guess">Guess</string>
    <string name="change_country_image_button">Change country image button</string>
    <string name="empty">Empty!</string>
    <string name="aq">Antarctica</string>
    <string name="skip">Skip</string>

</resources>